[package]
name = "hyper-async-io"
description = "A simple crate that provides an interface to AsyncRead and AsyncWrite for Hyper's Body"
authors = ["Andrés F. Quintero <afquinteromoreano@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
hyper = { version = "0.14.27", features = ["stream"] }
tokio = { version = "1.33.0", default-features = false }
